# ryushicup2026

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: baseline.py  mock_vllm_server.py
