[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
]
